src/BlazorUI/Bit.BlazorUI/Components/Inputs/TimePickers/CircularTimePicker/BitCircularTimePicker.scss
@import "../../../../Styles/functions.scss";

.bit-ctp {
    &.bit-dis {
        .bit-ctp-lbl {
            color: $color-foreground-disabled;
        }

        .bit-ctp-fld-grp {
            cursor: default;
            pointer-events: none;
            color: $color-foreground-disabled;
            background: none $color-background-disabled;
            border: $shape-border-width $shape-border-style $color-border-disabled;

            .bit-icon {
                cursor: default;
                color: $color-foreground-disabled;
            }

            input {
                cursor: default;
                color: $color-foreground-disabled;
                background: none $color-background-disabled;
            }
        }
    }

    &.bit-inv {
        .bit-ctp-fld-grp {
            border-color: $color-state-error;
        }
    }
}

.bit-ctp-lbl {
    margin: 0;
    display: block;
    box-shadow: none;
    font-weight: 600;
    box-sizing: border-box;
    font-size: spacing(1.75);
    padding: spacing(0.625) 0;
    overflow-wrap: break-word;
    color: $color-foreground-primary;
}

.bit-ctp-wrp {
    position: relative;
}

.bit-ctp-fld-grp {
    margin: 0;
    display: flex;
    cursor: pointer;
    box-shadow: none;
    height: spacing(4);
    position: relative;
    align-items: center;
    padding: 0 spacing(1);
    flex-flow: row nowrap;
    box-sizing: border-box;
    border-radius: $shape-border-radius;
    background-color: $color-background-primary;
    border: $shape-border-width $shape-border-style $color-border-primary;

    .bit-icon {
        cursor: pointer;
        padding-right: 0;
        padding-left: spacing(1);
        color: $color-foreground-secondary;
    }

    input {
        margin: 0;
        outline: 0;
        padding: 0;
        width: 100%;
        min-width: 0;
        height: 100%;
        border: none;
        cursor: pointer;
        border-radius: 0;
        box-shadow: none;
        font-weight: 400;
        box-sizing: border-box;
        text-overflow: ellipsis;
        font-size: spacing(1.75);
        background: none transparent;
        color: $color-foreground-primary;
        font-family: $typography-font-family;
    }
}

.bit-ctp-edt-inp {
    input {
        cursor: default;
    }
}

.bit-ctp-lfic {
    .bit-ctp-fld-grp {
        flex-direction: row-reverse;

        .bit-icon {
            padding-left: 0;
            padding-right: spacing(1);
        }
    }
}

.bit-ctp-foc {
    .bit-ctp-fld-grp::after {
        content: "";
        position: absolute;
        pointer-events: none;
        inset: spacing(-0.125);
        border-radius: $shape-border-radius;
        border: spacing(0.25) $shape-border-style $color-primary-main;
    }
}

.bit-ctp-und {
    .bit-ctp-wrp {
        display: flex;
        width: 100%;
        border-bottom: $shape-border-width $shape-border-style $color-border-primary;
    }

    .bit-ctp-fld-grp {
        border: none;
        flex: 1 1 0px;
        text-align: left;
    }

    &.bit-dis {
        .bit-ctp-wrp {
            border-bottom-color: $color-border-disabled;
        }
    }

    &.bit-ctp-foc {
        .bit-ctp-fld-grp::after {
            border: none;
            border-radius: 0;
            border-bottom: spacing(0.25) $shape-border-style $color-border-primary;
        }
    }
}

.bit-ctp-no-brd {
    .bit-ctp-fld-grp {
        border: none;
    }
}

.bit-ctp-ovl {
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    display: none;
    position: fixed;
    z-index: $zindex-overlay;
    background-color: transparent;
}

.bit-ctp-cal {
    display: none;
    position: fixed;
    font-weight: 400;
    top: spacing(4.25);
    outline: transparent;
    box-sizing: border-box;
    z-index: $zindex-callout;
    font-size: spacing(1.75);
    box-shadow: $box-shadow-callout;
    border-radius: $shape-border-radius;
    font-family: $typography-font-family;
}

.bit-ctp-mcal {
    outline: none;
    position: relative;
    overflow: hidden auto;
    border-radius: $shape-border-radius;
    background-color: $color-background-primary;
}

.bit-ctp-tbr {
    display: flex;
    align-items: center;
    flex-direction: row;
    height: spacing(12.5);
    justify-content: center;
    min-width: spacing(32.5);
    color: $color-primary-text;
    background-color: $color-primary-main;
}

.bit-ctp-txt {
    border: 0;
    margin: 0;
    padding: 0;
    outline: 0;
    line-height: 1;
    cursor: pointer;
    font-weight: 400;
    user-select: none;
    align-items: center;
    display: inline-flex;
    text-decoration: none;
    vertical-align: middle;
    font-size: spacing(7.5);
    justify-content: center;
    -webkit-appearance: none;
    background-color: transparent;
    color: $color-foreground-primary;
}

.bit-ctp-ina {
    color: rgba(255,255,255,.54);
}

.bit-ctp-hm {
    display: flex;
    align-items: baseline;
    justify-content: flex-end;
}

.bit-ctp-am-pm {
    display: flex;
    margin-left: spacing(2.5);
    flex-direction: column;

    .bit-ctp-txt {
        font-size: spacing(2.6);
        min-width: spacing(2);
        padding-top: spacing(0.5);
    }
}

.bit-ctp-clk {
    margin: spacing(2);
    position: relative;
    border-radius: 50%;
    width: spacing(32.5);
    height: spacing(32.5);
    background-color: rgba(0,0,0,.07);
}

.bit-ctp-pin {
    top: 50%;
    left: 50%;
    position: absolute;
    border-radius: 50%;
    width: spacing(0.75);
    height: spacing(0.75);
    transform: translate(-50%,-50%);
    background-color: $color-primary-main;
}

.bit-ctp-ptr {
    bottom: 50%;
    position: absolute;
    width: spacing(0.25);
    left: calc(50% - spacing(0.125));
    transform-origin: center bottom 0;
    background-color: $color-primary-main;

    &.bit-ctp-ani {
        transition: transform 150ms cubic-bezier(0.4,0,0.2,1) 0ms,height 150ms cubic-bezier(0.4,0,0.2,1) 0ms;
    }
}

.bit-ctp-thm {
    border: none;
    position: absolute;
    width: spacing(3.5);
    border-radius: 100%;
    top: spacing(-2.375);
    height: spacing(3.5);
    left: spacing(-1.625);
    background-color: inherit;

    &.bit-ctp-thm-min {
        left: spacing(-0.5);
        width: spacing(1.25);
        top: spacing(-1.125);
        height: spacing(1.25);
        background: transparent;
        color: $color-primary-main;
        border: spacing(0.25) $shape-border-style;
    }
}

.bit-ctp-dil {
    width: 100%;
    height: 100%;
    position: absolute;
}

.bit-ctp-num {
    width: spacing(4);
    user-select: none;
    height: spacing(4);
    position: absolute;
    border-radius: 50%;
    align-items: center;
    display: inline-flex;
    justify-content: center;
    transition-duration: 120ms;
    transition-property: color;
    color: $color-foreground-primary;
    left: calc((100% - spacing(4))/2);
    bottom: calc(100% - spacing(5.75));
    background-color: transparent !important;

    &.bit-ctp-sel {
        color: $color-foreground-primary;
    }
}

.bit-ctp-stk {
    height: 50%;
    bottom: 50%;
    position: absolute;
    width: spacing(0.375);
    left: calc(50% - spacing(0.125));
    transform-origin: center bottom 0;
}

.bit-ctp-hr:after,
.bit-ctp-min:after {
    left: 50%;
    content: "";
    top: spacing(2.5);
    position: absolute;
    border-radius: 50%;
    background-color: inherit;
    transform: translate(-50%, -50%);
}

.bit-ctp-hr:after {
    width: spacing(7.75);
    height: spacing(7.75);
}

.bit-ctp-min:after {
    height: spacing(5.5);
    width: spacing(1.875);
}

.bit-ctp-inr {
    bottom: 0;
    height: 35%;
    position: absolute;
    width: spacing(0.375);
    left: calc(50% - spacing(0.125));
    transform-origin: center bottom 0;

    &:after {
        left: 50%;
        top: -60%;
        content: "";
        width: spacing(6);
        height: spacing(6);
        position: absolute;
        border-radius: 50%;
        background-color: inherit;
        transform: translate(-50%,-50%);
    }
}

.bit-ctp-otr {
    width: 0;
    height: 35%;
    bottom: 35%;
    position: absolute;
    left: calc(50% - spacing(0.125));
    transform-origin: center bottom 0;

    &:after {
        content: "";
        left: 50%;
        top: spacing(-2.5);
        height: spacing(6);
        position: absolute;
        border-radius: 50%;
        width: spacing(7.75);
        background-color: inherit;
        transform: translate(-50%,-50%);
    }
}

.bit-ctp-rsp {
    @media only screen and (max-width: 600px) {
        .bit-ctp-clk {
            margin: spacing(2) auto;
        }
    }
}

